<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pedro.cajabar.StockActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/stockTextStyle"
            android:layout_gravity="start"
            android:textColor="@color/colorPrimary"
            android:text="@string/cantidad" />

        <Spinner
            android:id="@+id/cantidadProducto"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/opc_cantidad" />


            <TextView

                style="@style/stockTextStyle"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio" />

            <TextView
                android:id="@+id/precio"
                style="@style/stockTextStyle"
                android:layout_marginStart="20dp"
                android:textColor="@color/secondaryTextColor"
                android:text="@string/na" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableLayout
            android:id="@+id/tablaStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </TableLayout>
    </ScrollView>

    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bConfirmar"
            style="@style/buttonStyle"
            android:onClick="confirmar"
            android:layout_gravity="start"
            android:text="@string/confirmar" />

        <Button
            android:id="@+id/bCancelarProducto"
            style="@style/buttonStyle"
            android:onClick="cancelar"
            android:layout_gravity="end"
            android:text="@string/cancelar" />
    </FrameLayout>

</LinearLayout>
